--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_general_ci
     ports:
       - "3306:3306"
-    # volumes:
-      #  - "/docker/mysql/data:/var/lib/mysql"
+    volumes:
+      - ./docker/mysql/data:/var/lib/mysql
       #  - "/docker/mysql/conf:/etc/mysql/conf.d"
-      # - "/docker/mysql/initdb:/docker-entrypoint-initdb.d"
+      - ./docker/mysql/init:/docker-entrypoint-initdb.d
     environment:
       MYSQL_ROOT_USER: root
       MYSQL_ROOT_PASSWORD: mysql
